feat : send mail part 1
